--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 </head>
 <body>
   <!-- You don't really have to edit this index.html file since p5.js will create the canvas.--> 
+  <h1> change color</h1>
+  <h1> change noise</h1>
+  <h1> Press S <br> to save</h1>
 </body>
 </html>
